Use chunk option in the remote partitioning sample of the what's new section

--- a/spring-batch-docs/asciidoc/whatsnew.adoc
+++ b/spring-batch-docs/asciidoc/whatsnew.adoc
@@ -161,7 +161,10 @@ public class RemotePartitioningAppConfig {
                .get("workerStep")
                .inputChannel(incomingRequestsFromMaster())
                .outputChannel(outgoingRepliesToMaster())
-               .tasklet(tasklet()) // or chunk(CHUNK_SIZE)
+               .chunk(CHUNK_SIZE)
+               .reader(itemReader())
+               .processor(itemProcessor())
+               .writer(itemWriter())
                .build();
    }
 
