Code review changes:
* use hard coded constants in docs
* change visibility of method `beanFactory` to public in builders

--- a/spring-batch-docs/asciidoc/spring-batch-integration.adoc
+++ b/spring-batch-docs/asciidoc/spring-batch-integration.adoc
@@ -1315,7 +1315,7 @@ public class RemotePartitioningJobConfiguration {
                  return this.masterStepBuilderFactory
                     .get("masterStep")
                     .partitioner("workerStep", partitioner())
-                    .gridSize(GRID_SIZE)
+                    .gridSize(10)
                     .outputChannel(outgoingRequestsToWorkers())
                     .inputChannel(incomingRepliesFromWorkers())
                     .build();
@@ -1337,7 +1337,7 @@ public class RemotePartitioningJobConfiguration {
                     .get("workerStep")
                     .inputChannel(incomingRequestsFromMaster())
                     .outputChannel(outgoingRepliesToMaster())
-                    .chunk(CHUNK_SIZE)
+                    .chunk(100)
                     .reader(itemReader())
                     .processor(itemProcessor())
                     .writer(itemWriter())
