--- a/spring-batch-docs/asciidoc/appendix.adoc
+++ b/spring-batch-docs/asciidoc/appendix.adoc
@@ -102,6 +102,9 @@
             and handles some transaction-related work that a non-"JPA-aware"
             `ItemWriter` would not need to know about and
             then delegates to another writer to do the actual writing.
+|KafkaItemWriter|Using a `KafkaTemplate` object, items are written to the default topic through the
+            `KafkaTemplate#sendDefault(Object, Object)` method using a `Converter` to map the key from the item.
+            A delete flag can also be configured to send delete events to the topic.
 |MimeMessageItemWriter|Using Spring's `JavaMailSender`, items of type `MimeMessage`
             are sent as mail messages.
 |MongoItemWriter|Given a `MongoOperations` object, items are written
