Fix code example in docs
`StepExecution#setTerminateOnly` does not take a boolean parameter.

--- a/spring-batch-docs/asciidoc/common-patterns.adoc
+++ b/spring-batch-docs/asciidoc/common-patterns.adoc
@@ -181,7 +181,7 @@ public class CustomItemWriter extends ItemListenerSupport implements StepListene
 
     public void afterRead(Object item) {
         if (isPoisonPill(item)) {
-            stepExecution.setTerminateOnly(true);
+            stepExecution.setTerminateOnly();
        }
     }
 
