Initial support for batch metrics with Micrometer
Implements BATCH-2774

--- a/spring-batch-docs/asciidoc/index-single.adoc
+++ b/spring-batch-docs/asciidoc/index-single.adoc
@@ -34,6 +34,8 @@ include::jsr-352.adoc[]
 
 include::spring-batch-integration.adoc[]
 
+include::monitoring-and-metrics.adoc[]
+
 include::appendix.adoc[]
 
 include::schema-appendix.adoc[]
