--- a/spring-batch-docs/asciidoc/footer/index-footer.adoc
+++ b/spring-batch-docs/asciidoc/footer/index-footer.adoc
@@ -2,7 +2,7 @@
 Lucas Ward, Dave Syer, Thomas Risberg, Robert Kasanicky, Dan Garrette, Wayne Lund,
 Michael Minella, Chris Schaefer, Gunnar Hillert, Glenn Renfro, Jay Bryant, Mahmoud Ben Hassine
 
-Copyright © 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018 Pivotal, Inc. All Rights
+Copyright © 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019 Pivotal, Inc. All Rights
 Reserved.
 
 Copies of this document may be made for your own use and for
